專案結構說明

--- a/ContosoPizza/ContosoPizza.csproj
+++ b/ContosoPizza/ContosoPizza.csproj
@@ -1,5 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
+<!-- ContosoPizza.csproj 包含專案設定中繼資料，例如相依性 -->
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
